# bevy_action_animation

./: Cargo.toml  LICENSE-MIT  README.md
assets/: player.anim.ron  player.clip.ron
examples/: player_animations.rs
src/: asset.rs  clip.rs  group.rs  lib.rs  system.rs
