[package]
name = "bevy_action_animation"
version = "0.1.0"
edition = "2021"
authors = ["undersquire"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/bevy_action_animation"
homepage = "https://github.com/undersquire/bevy_action_animation"
repository = "https://github.com/undersquire/bevy_action_animation"
readme = "README.md"
description = ""

[dependencies]
bevy_app = "0.10"
bevy_ecs = "0.10"
bevy_time = "0.10"
bevy_asset = "0.10"
bevy_derive = "0.10"
bevy_sprite = "0.10"
bevy_reflect = "0.10"
bevy_action = { version = "0.1", git = "https://www.github.com/undersquire/bevy_action" }
serde = { version = "1", default-features = false, features = ["derive"] }
ron = "0.8"
