[package]
name = "bevy_action_animation"
version = "0.2.0"
edition = "2021"
authors = ["undersquire"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/bevy_action_animation"
homepage = "https://github.com/undersquire/bevy_action_animation"
repository = "https://github.com/undersquire/bevy_action_animation"
readme = "README.md"
description = "Action-based animation system."
keywords = ["bevy", "animation", "sprite", "action", "atlas"]

[dependencies]
rand = "0.8"
bevy_app = "0.10"
bevy_ecs = "0.10"
bevy_time = "0.10"
bevy_utils = "0.10"
bevy_asset = "0.10"
bevy_derive = "0.10"
bevy_sprite = "0.10"
bevy_reflect = "0.10"
bevy_action = { version = "0.2", git = "https://www.github.com/undersquire/bevy_action" }
serde = { version = "1", optional = true }

[features]
default = ["derive"]
derive = ["dep:serde"]

[dev-dependencies]
bevy = "0.10"
ron = "0.8"
serde = "1"

[[example]]
name = "player_animations"
path = "examples/player_animations.rs"

[package.metadata.example.player_animations]
name = "Player Animations"
description = "An example of how player animations can be implemented using actions."
